<resources>
    <string name="app_name">DApparels</string>
    <string name="full_app_name">Danny Apparels</string>

    <string name="content_description">image</string>
    <string name="title_login">Login</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>
    <string name="login">Login</string>


    <string name="create_an_account">CREATE AN ACCOUNT</string>

    <string name="hint_last_name">Last Name</string>
    <string name="hint_first_name">First Name</string>
    <string name="at_hint_confirm_password">Confirm Password</string>

    <string name="i_agree_to_the_terms_and_conditions">I Agree to the <u>Terms and Conditions</u></string>
    <string name="btn_lbl_register">Register</string>

    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="loginUnderlined"><u>Login</u></string>


    <string name="err_msg_enter_first_name">Please enter first name</string>
    <string name="err_msg_enter_last_name">Please enter last name</string>
    <string name="err_msg_enter_email">Please enter email</string>
    <string name="err_msg_enter_password">Please enter Password</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm Password</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password mis-match</string>
    <string name="err_msg_agree_terms_and_condition">Please agree to terms and conditions</string>

    <string name="btn_submit_label">Submit</string>
    <string name="email_send_success">Email Sent!</string>
    <string name="register_success">Registered Successfully!</string>

    <string name="title_complete_Profile">Complete Profile</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="lbl_male">MALE</string>
    <string name="lbl_female">FEMALE</string>
    <string name="lbl_save">SAVE</string>
    <string name="read_storage_permission_denied">You have denied the permission for storage. You must go to the app settings to change it to Allow</string>
    <string name="imageLoad_Failed">Failed to Load Image</string>
    <string name="err_msg_enter_mobile_number">Please enter your mobile numnber</string>
    <string name="update_success">Profile updated Successfully!</string>
    <!--    <string name="title_activity_dash_board">MainActivity</string>-->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="please_click_back_again_to_exit"> Please click back again to exit.</string>
    <string name="title_products">Products</string>
    <string name="title_orders">Orders</string>
    <string name="action_settings">Settings</string>
    <string name="title_settings">Profile Settings</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Address</string>
    <string name="btn_lbl_logout">Logout</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="No_Products_added_yet">No products added yet</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_products_added_yet">No products added yet!</string>
    <string name="no_dashboard_item_found">No items found!</string>

    <string name="title_product_details">PRODUCT DETAILS</string>
    <string name="lbl_product_description">Product Description</string>
    <string name="lbl_product_details_stock_quantity">Stock Quantity</string>
    <string name="btn_lbl_add_to_cart">Add to Cart</string>
    <string name="btn_lbl_go_to_cart">Go to Cart</string>
    <string name="success_message_item_add_to_cart">Item added to Cart Successfully!</string>

    <string name="title_my_cart">MY CART</string>
    <string name="no_cart_item_found">No item found in cart!</string>
    <string name="lbl_subtotal">Subtotal</string>
    <string name="lbl_shipping_charge">Shipping Charge</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="btn_lbl_checkout">Checkout</string>
    <string name="action_cart">My Cart</string>

    <string name="lbl_out_of_stock">OUT OF STOCK</string>
    <string name="msg_item_removed_successfully">Item removed successfully.</string>

    <string name="msg_for_available_stock">Available stock is %1$s!. You can not add more than stock quantity.</string>

    <string name="no_orders_placed_yet">No orders placed yet!</string>

</resources>