<?xml version="1.0" encoding="utf-8"?>

<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/purple_500">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.example.dapparels.Utilities.DATextViewBold
            android:id="@+id/DATextViewBold2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:text="@string/create_an_account"
            android:textColor="@color/white"
            android:textColorHint="#FFFFFF"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="214dp"
            android:layout_height="153dp"
            android:layout_gravity="center"
            android:contentDescription="TODO"
            app:srcCompat="@mipmap/ic_launcher_foreground" />

        <com.example.dapparels.Utilities.DAEditText
            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/hint_first_name"
            android:textColor="#FFFFFF"
            android:textColorHint="@color/white" />

        <com.example.dapparels.Utilities.DAEditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/hint_last_name"
            android:textColor="#FFFFFF"
            android:textColorHint="@color/white" />

        <com.example.dapparels.Utilities.DAEditText
            android:id="@+id/et_email_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/et_hint_email_id"
            android:textColor="#FFFFFF"
            android:textColorHint="@color/white" />

        <com.example.dapparels.Utilities.DAEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/et_hint_password"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white" />

        <com.example.dapparels.Utilities.DAEditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/at_hint_confirm_password"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="@color/white" />

        <CheckBox
            android:id="@+id/cb_terms_and_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:checked="false"
            android:gravity="center"
            android:shadowColor="#FFFFFF"
            android:text="@string/i_agree_to_the_terms_and_conditions"
            android:textColor="@color/white"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF" />

        <com.example.dapparels.Utilities.DAButton
            android:id="@+id/main_register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/button_background"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingTop="@dimen/btn_padding"
            android:paddingBottom="@dimen/btn_padding"
            android:text="@string/btn_lbl_register"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_textSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password"
            app:layout_constraintVertical_bias="0.0"
            tools:targetApi="m" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.example.dapparels.Utilities.DATextViewRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:text="@string/already_have_an_account"
                android:textColor="@color/white"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#FFFFFF" />

            <com.example.dapparels.Utilities.DATextViewRegular
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/loginUnderlined"
                android:textColor="@color/white" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>
